--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -67,6 +67,7 @@ jobs:
         uses: actions/setup-node@v2.1.5
         with:
           node-version: '20.x'
+          cache: 'npm'
 
       - name: "🛠 verify node version"
         run: node -v
