--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -67,7 +67,8 @@ jobs:
         uses: actions/setup-node@v2.1.5
         with:
           node-version: '20.x'
-          cache: 'npm'
+          always-auth: false
+          check-latest: true
 
       - name: "🛠 verify node version"
         run: node -v
