--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -19,9 +19,9 @@ jobs:
         uses: actions/checkout@v2
 
       - name: "🔧 setup node"
-        uses: actions/setup-node@v2.1.5
+        uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: '20.x'
 
       - name: "🔧 install npm@latest"
         run: npm i -g npm@latest
